add AAAA ALIAS records for several apps

--- a/stacks/audiogram.yml
+++ b/stacks/audiogram.yml
@@ -134,6 +134,12 @@ Resources:
       Comment: Record sets for dualstack web traffic to an audiogram instance
       HostedZoneName: prx.tech.
       RecordSets:
+        - Type: AAAAA
+          Name: !Sub |
+            audiogram.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+          AliasTarget:
+            DNSName: !Ref PlatformALBDNSName
+            HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
         - Type: A
           Name: !Sub |
             audiogram.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
