--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -156,6 +156,11 @@ Resources:
       Comment: Record sets for dualstack web traffic to an play instance
       HostedZoneName: prx.tech.
       RecordSets:
+        - Type: AAAA
+          Name: !Sub play.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+          AliasTarget:
+            DNSName: !Ref PlatformALBDNSName
+            HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
         - Type: A
           Name: !Sub play.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
           AliasTarget:
