--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -153,6 +153,11 @@ Resources:
       Comment: Record sets for dualstack web traffic to an publish instance
       HostedZoneName: prx.tech.
       RecordSets:
+        - Type: AAAA
+          Name: !Sub publish.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+          AliasTarget:
+            DNSName: !Ref PlatformALBDNSName
+            HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
         - Type: A
           Name: !Sub publish.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
           AliasTarget:
