--- a/stacks/web-application.yml
+++ b/stacks/web-application.yml
@@ -192,6 +192,11 @@ Resources:
       Comment: Record sets for dualstack web traffic to a web app instance
       HostedZoneName: prx.tech.
       RecordSets:
+        - Type: AAAA
+          Name: !Sub play.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+          AliasTarget:
+            DNSName: !Ref PlatformALBDNSName
+            HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
         - Type: A
           Name: !Sub ${AppName}.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
           AliasTarget:
