--- a/stacks/web-alb-application.yml
+++ b/stacks/web-alb-application.yml
@@ -119,6 +119,7 @@ Resources:
           TargetGroupArn: !Ref ALBTargetGroup
   ALBTargetGroup:
     Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
+    DependsOn: ALB
     Properties:
       HealthCheckIntervalSeconds: 60
       HealthCheckTimeoutSeconds: 10
