--- a/stacks/web-alb-application.yml
+++ b/stacks/web-alb-application.yml
@@ -226,6 +226,9 @@ Resources:
             - web
   WebService:
     Type: "AWS::ECS::Service"
+    DependsOn:
+      - ALBHTTPListener
+      - ALBHTTPSListener
     Properties:
       Cluster: !Ref ECSCluster
       DeploymentConfiguration:
