--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -132,6 +132,7 @@ Resources:
         - Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
       Parameters:
+        InfrastructureStorageStackName: !Ref InfrastructureStorageStackName
         KeyPairName: !Ref AsgKeyPairName
         EnvironmentType: !Ref EnvironmentType
         NewRelicLicenseKey: !Ref NewRelicLicenseKey
