Wrong order for dovetail.staging

--- a/stacks/certificate.yml
+++ b/stacks/certificate.yml
@@ -22,7 +22,7 @@ Resources:
       SubjectAlternativeNames:
         - "*.prx.org"
         - "*.prxu.org"
-        - "*.dovetail.prxu.org"
+        - "*.staging.prxu.org"
         - "*.prx.tech"
         - "*.staging.prx.tech"
         - !Sub "*.cdn.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech"
