--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -450,6 +450,16 @@ Resources:
       # TODO This will need access to S3 buckets where Lambda code archives are
       # stored at some point
       Policies:
+        # Lambda archives are accessed through S3
+        - PolicyName: SupportBucketAccess
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "s3:GetObject"
+                Resource:
+                  - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSupportBucket", "/*"]]
         # Nested stack templates are accessed through S3
         - PolicyName: TemplateBucketAccess
           PolicyDocument:
