--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -128,23 +128,23 @@ Resources:
                   - "*"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
-  # ECSAmiLookupFunction:
-  #   Type: "AWS::Lambda::Function"
-  #   Properties:
-  #     Code:
-  #       S3Bucket:
-  #         Fn::ImportValue:
-  #           !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
-  #       S3Key: utility/ecs-ami-lookup.zip
-  #     Description: Finds AMI ID for ECS optimized images in a given region
-  #     Handler: index.handler
-  #     MemorySize: 128
-  #     Role: !GetAtt LambdaExecutionIAMRole.Arn
-  #     Runtime: nodejs6.10
-  #     Tags:
-  #       - Key: Project
-  #         Value: Infrastructure
-  #     Timeout: 10
+  ECSAmiLookupFunction:
+    Type: "AWS::Lambda::Function"
+    Properties:
+      Code:
+        S3Bucket:
+          Fn::ImportValue:
+            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
+        S3Key: utility/ecs-ami-lookup.zip
+      Description: Finds AMI ID for ECS optimized images in a given region
+      Handler: index.handler
+      MemorySize: 128
+      Role: !GetAtt LambdaExecutionIAMRole.Arn
+      Runtime: nodejs6.10
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+      Timeout: 10
   # ECSAmiInfo:
   #   Type: "Custom::EcsAmiLookup"
   #   Properties:
