Turn on AMI Lookup custom resource

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -145,11 +145,11 @@ Resources:
         - Key: Project
           Value: Infrastructure
       Timeout: 10
-  # ECSAmiInfo:
-  #   Type: "Custom::EcsAmiLookup"
-  #   Properties:
-  #     ServiceToken: !GetAtt ECSAmiLookupFunction.Arn
-  #     Region: !Ref AWS::Region
+  ECSAmiInfo:
+    Type: "Custom::EcsAmiLookup"
+    Properties:
+      ServiceToken: !GetAtt ECSAmiLookupFunction.Arn
+      Region: !Ref AWS::Region
   # ECS Cluster and ASG
   ECSCluster:
     Type: "AWS::ECS::Cluster"
