Use AMI Lookup ID in launch config

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -66,31 +66,6 @@ Mappings:
       DefaultDesiredCapacity: "8"
       WarningThreshold: "35"
       MaxSize: "40"
-  RegionMap:
-    # AMI's as of 2017-07-10
-    # https://docs.aws.amazon.com/AmazonECS/latest/developerguide/ecs-optimized_AMI_launch_latest.html
-    us-east-1:
-      ImageId: ami-04351e12
-    us-east-2:
-      ImageId: ami-207b5a45
-    us-west-1:
-      ImageId: ami-7d664a1d
-    us-west-2:
-      ImageId: ami-57d9cd2e
-    eu-west-1:
-      ImageId: ami-809f84e6
-    eu-west-2:
-      ImageId: ami-ff15039b
-    eu-central-1:
-      ImageId: ami-a3a006cc
-    ap-northeast-1:
-      ImageId: ami-e4657283
-    ap-southeast-1:
-      ImageId: ami-19f7787a
-    ap-southeast-2:
-      ImageId: ami-42e9f921
-    ca-central-1:
-      ImageId: ami-3da81759
 Resources:
   # AMI Lookup Custom Resource
   LambdaExecutionIAMRole:
@@ -403,7 +378,7 @@ Resources:
                 - "/etc/cfn/hooks.d/cfn-auto-reloader.conf"
     Properties:
       AssociatePublicIpAddress: true
-      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", ImageId]
+      ImageId: !GetAtt ECSAmiInfo.Id
       IamInstanceProfile: !Ref ECSInstanceProfile
       InstanceType: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, InstanceType]
       InstanceMonitoring: false
