Add a custom resource param to trigger AMI lookup

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -125,6 +125,7 @@ Resources:
     Properties:
       ServiceToken: !GetAtt ECSAmiLookupFunction.Arn
       Region: !Ref AWS::Region
+      Rotation: 1 # Change this to trigger AMI updates
   # ECS Cluster and ASG
   ECSCluster:
     Type: "AWS::ECS::Cluster"
