The other staging

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -1104,7 +1104,7 @@ Resources:
         ComputeType: BUILD_GENERAL1_SMALL
         EnvironmentVariables:
           - Name: DOVETAIL_HOST
-            Value: dovetail-staging.prxu.org
+            Value: dovetail.staging.prxu.org
           - Name: DOVETAIL_PROD_HOST
             Value: dovetail.prxu.org
           - Name: FEEDER_HOST
