--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -73,6 +73,8 @@ Parameters:
     Type: String
   InfrastructureGitCommit:
     Type: String
+  PipelineExecutionNonce:
+    Type: String
 Mappings:
   EnvironmentTypeMap:
     Testing:
