Fix AAAA record for audiogram

--- a/stacks/audiogram.yml
+++ b/stacks/audiogram.yml
@@ -134,7 +134,7 @@ Resources:
       Comment: Record sets for dualstack web traffic to an audiogram instance
       HostedZoneName: prx.tech.
       RecordSets:
-        - Type: AAAAA
+        - Type: AAAA
           Name: !Sub |
             audiogram.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
           AliasTarget:
