Enable IPv6 support for ALB's

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -78,6 +78,7 @@ Resources:
   DovetailALB:
     Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
     Properties:
+      IpAddressType: dualstack
       Scheme: internet-facing
       SecurityGroups:
         - !Ref DovetailSecurityGroup
