--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -66,6 +66,7 @@ Resources:
   PlatformALB:
     Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
     Properties:
+      IpAddressType: dualstack
       Scheme: internet-facing
       SecurityGroups:
         - !Ref PlatformSecurityGroup
