--- a/stacks/web-alb-application.yml
+++ b/stacks/web-alb-application.yml
@@ -84,6 +84,7 @@ Resources:
   ALB:
     Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
     Properties:
+      IpAddressType: dualstack
       Scheme: internet-facing
       SecurityGroups:
         - !Ref ALBSecurityGroup
