--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -66,7 +66,7 @@ Resources:
   PlatformALB:
     Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
     Properties:
-      IpAddressType: dualstack
+      # IpAddressType: dualstack
       Scheme: internet-facing
       SecurityGroups:
         - !Ref PlatformSecurityGroup
