More prod tasks

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -445,6 +445,8 @@ Resources:
         SecretsVersion: !Ref FeederSecretsVersion
         AppName: "feeder"
         CreateWorker: "true"
+        DesiredWebsProduction: 6
+        DesiredWorkersProduction: 1
         ContainerPort: 3000
         ContainerMemory: 500
         ContainerCpu: 128
