No longer need an exception for us-west-1, apparently

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -76,11 +76,12 @@ Resources:
       RouteTableId: !Ref RouteTable
       GatewayId: !Ref InternetGateway
       DestinationCidrBlock: 0.0.0.0/0
+  #
   Subnet1:
     Type: "AWS::EC2::Subnet"
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !If [IsUsWest1, us-west-1c, !Join ["", [!Ref "AWS::Region", a]]]
+      AvailabilityZone: !Join ["", [!Ref "AWS::Region", a]]
       CidrBlock: 10.0.1.0/24
       Tags:
         - Key: Project
