Add third AZ to ECS, ASG, and ALB

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -31,9 +31,13 @@ Parameters:
     Type: "AWS::EC2::Subnet::Id"
   VPCSubnet2:
     Type: "AWS::EC2::Subnet::Id"
+  VPCSubnet3:
+    Type: "AWS::EC2::Subnet::Id"
   VPCSubnet1AZ:
     Type: "AWS::EC2::AvailabilityZone::Name"
   VPCSubnet2AZ:
+    Type: "AWS::EC2::AvailabilityZone::Name"
+  VPCSubnet3AZ:
     Type: "AWS::EC2::AvailabilityZone::Name"
   OpsDebugMessagesSnsTopicArn:
     Type: String
@@ -422,6 +426,7 @@ Resources:
       AvailabilityZones:
         - !Ref VPCSubnet1AZ
         - !Ref VPCSubnet2AZ
+        - !Ref VPCSubnet3AZ
       Cooldown: "240"
       DesiredCapacity: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DefaultDesiredCapacity]
       HealthCheckGracePeriod: 512
@@ -456,6 +461,7 @@ Resources:
       VPCZoneIdentifier:
         - !Ref VPCSubnet1
         - !Ref VPCSubnet2
+        - !Ref VPCSubnet3
 Outputs:
   ECSCluster:
     Description: >
