--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -16,6 +16,8 @@ Parameters:
     Type: "AWS::EC2::Subnet::Id"
   VPCSubnet2:
     Type: "AWS::EC2::Subnet::Id"
+  VPCSubnet3:
+    Type: "AWS::EC2::Subnet::Id"
   VPCCertificateArn:
     Type: String
   OpsErrorMessagesSnsTopicArn:
@@ -73,6 +75,7 @@ Resources:
       Subnets:
         - !Ref VPCSubnet1
         - !Ref VPCSubnet2
+        - !Ref VPCSubnet3
       Tags:
         - Key: Project
           Value: platform.prx.org
