Add third AZ to feeder and dovetail

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -428,6 +428,7 @@ Resources:
         VPC: !GetAtt VPCStack.Outputs.VPC
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
+        VPCSubnet3: !GetAtt VPCStack.Outputs.Subnet3
         VPCCertificateArn: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
@@ -466,6 +467,7 @@ Resources:
         VPC: !GetAtt VPCStack.Outputs.VPC
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
+        VPCSubnet3: !GetAtt VPCStack.Outputs.Subnet3
         VPCCertificateArn: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
