--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -11,6 +11,8 @@ Parameters:
     Type: "AWS::EC2::Subnet::Id"
   VPCSubnet2:
     Type: "AWS::EC2::Subnet::Id"
+  VPCSubnet3:
+    Type: "AWS::EC2::Subnet::Id"
   VPCCertificateArn:
     Type: String
   # ECS Cluster ################################################################
@@ -85,6 +87,7 @@ Resources:
       Subnets:
         - !Ref VPCSubnet1
         - !Ref VPCSubnet2
+        - !Ref VPCSubnet3
       Tags:
         - Key: Project
           Value: Dovetail
