--- a/stacks/web-alb-application.yml
+++ b/stacks/web-alb-application.yml
@@ -12,6 +12,8 @@ Parameters:
     Type: "AWS::EC2::Subnet::Id"
   VPCSubnet2:
     Type: "AWS::EC2::Subnet::Id"
+  VPCSubnet3:
+    Type: "AWS::EC2::Subnet::Id"
   VPCCertificateArn:
     Type: String
   # ECS Cluster ################################################################
@@ -91,6 +93,7 @@ Resources:
       Subnets:
         - !Ref VPCSubnet1
         - !Ref VPCSubnet2
+        - !Ref VPCSubnet3
       Tags:
         - Key: Project
           Value: !Ref AppName
