Update docs for third AZ

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -2,13 +2,14 @@
 # ACL, etc) can't be tagged, so they don't match the resources that are
 # explicitly created. They work correctly, though, and will be torn down if the
 # stack is destroyed
-# NOTE This template creates subnets in two AZ's regardless of which region the
+# NOTE This template creates subnets in 3 AZ's regardless of which region the
 # stack is created in. The template will use AZ's `a` and `b`, unless they are
 # unavailable, in which case it uses the lowest-lettered zones that are
-# available.
+# available. (Because of this, it can only be launched in regions that have
+# three or more availability zones)
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
-  Creates a general-purpose VPC with two availability zones
+  Creates a general-purpose VPC with three availability zones
 Conditions:
   # Region conditions
   IsUsEast1: !Equals [!Ref "AWS::Region", us-east-1]
