Only run CMS in staging

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -12,6 +12,8 @@ Description: >
   in separate templates.
 Conditions:
   IsUsEast1: !Equals [!Ref "AWS::Region", us-east-1]
+  IsStaging: !Equals [!Ref EnvironmentType, Staging]
+  IsProduction: !Equals [!Ref EnvironmentType, Production]
 Parameters:
   AsgKeyPairName:
     Description: >
@@ -499,6 +501,7 @@ Resources:
   #### CMS #####################################################################
   CmsStack:
     Type: "AWS::CloudFormation::Stack"
+    Condition: IsStaging # Staging only, for now
     DependsOn: ECSClusterStack
     Properties:
       NotificationARNs:
