--- a/stacks/web-application.yml
+++ b/stacks/web-application.yml
@@ -205,7 +205,7 @@ Resources:
       HostedZoneName: prx.tech.
       RecordSets:
         - Type: AAAA
-          Name: !Sub play.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+          Name: !Sub ${AppName}.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
           AliasTarget:
             DNSName: !Ref PlatformALBDNSName
             HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
