Only output for staging

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -573,5 +573,6 @@ Outputs:
     Description: Domain name for dovetail app
     Value: !GetAtt DovetailStack.Outputs.HostedZoneDNSName
   CmsHostedZoneDNSName:
+    Condition: IsStaging
     Description: Domain name for cms app
     Value: !GetAtt CmsStack.Outputs.HostedZoneDNSName
