Fix staging descriptions

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -30,7 +30,7 @@ Metadata:
       InfrastructureStorageStackName:
         default: Storage stack name
       InfrastructureConfigStagingKey:
-        default: Production S3 object key
+        default: Staging S3 object key
       AutoScalingSlackWebhookUrl:
         default: Auto Scaling
       CloudWatchSlackWebhookUrl:
@@ -53,7 +53,7 @@ Parameters:
   InfrastructureConfigStagingKey:
     Default: template-config-staging.zip
     Description: >
-      The S3 object key for the production template configuration file archive
+      The S3 object key for the staging template configuration file archive
       (.zip), inside the InfrastructureConfigBucket
     Type: String
   AutoScalingSlackWebhookUrl:
