--- a/stacks/adze.prx.org.yml
+++ b/stacks/adze.prx.org.yml
@@ -1,11 +1,11 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: castle.prx.org application running in Docker
+Description: adze.prx.org application running in Docker
 Mappings:
   Shared:
     Project:
-      name: castle.prx.org
+      name: adze.prx.org
     Container:
-      name: castle-phoenix
+      name: adze-phoenix
 Conditions:
   CreateStagingResources: !Equals [!Ref EnvironmentType, Staging]
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
@@ -47,24 +47,24 @@ Parameters:
   SecretsBase:
     Type: String
   # Shared ENV #################################################################
-  # Castle ECS #################################################################
-  CastleEcrImageTag:
+  # Adze ECS #################################################################
+  AdzeEcrImageTag:
     Type: String
-  # Castle ENV #################################################################
-  CastleSecretsVersion:
+  # Adze ENV #################################################################
+  AdzeSecretsVersion:
     Type: String
 Resources:
-  CastleLogGroup:
+  AdzeLogGroup:
     Type: "AWS::Logs::LogGroup"
     Properties:
       RetentionInDays: 14
-  CastleALBTargetGroup:
+  AdzeALBTargetGroup:
     Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
     Properties:
       HealthCheckIntervalSeconds: 60
       UnhealthyThresholdCount: 10
       HealthCheckPath: /api/v1
-      Name: !Sub castle-${EnvironmentTypeAbbreviation}-${VPC}
+      Name: !Sub adze-${EnvironmentTypeAbbreviation}-${VPC}
       Port: 80
       Protocol: HTTP
       TargetGroupAttributes:
@@ -76,64 +76,64 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub Castle-${EnvironmentType}
+          Value: !Sub Adze-${EnvironmentType}
       VpcId: !Ref VPC
   # ALB Listener Rules
-  CastleALBHTTPSHostWildcardListenerRule:
+  AdzeALBHTTPSHostWildcardListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Properties:
       Actions:
-        - TargetGroupArn: !Ref CastleALBTargetGroup
+        - TargetGroupArn: !Ref AdzeALBTargetGroup
           Type: forward
       Conditions:
         - Field: host-header
           Values:
-            - castle.*
+            - adze.*
       ListenerArn: !Ref PlatformALBHTTPSListenerArn
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
-  CastleALBHTTPHostWildcardListenerRule:
+  AdzeALBHTTPHostWildcardListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Properties:
       Actions:
-        - TargetGroupArn: !Ref CastleALBTargetGroup
+        - TargetGroupArn: !Ref AdzeALBTargetGroup
           Type: forward
       Conditions:
         - Field: host-header
           Values:
-            - castle.*
+            - adze.*
       ListenerArn: !Ref PlatformALBHTTPListenerArn
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "00"]]
   # ECS Service
-  CastleTaskDefinition:
+  AdzeTaskDefinition:
     Type: "AWS::ECS::TaskDefinition"
     Properties:
       ContainerDefinitions:
         - Cpu: 128
           Environment:
             - Name: APP_NAME
-              Value: "castle"
+              Value: "adze"
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
             - Name: AWS_SECRETS_BASE
               Value: !Ref SecretsBase
             - Name: AWS_SECRETS_VERSION
-              Value: !Ref CastleSecretsVersion
+              Value: !Ref AdzeSecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
           Essential: true
           # TODO
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/castle.prx.org:${CastleEcrImageTag}
+          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/adze.prx.org:${AdzeEcrImageTag}
           LogConfiguration:
             LogDriver: awslogs
             Options:
-              awslogs-group: !Ref CastleLogGroup
+              awslogs-group: !Ref AdzeLogGroup
               awslogs-region: !Ref AWS::Region
           Memory: 128
           Name: !FindInMap [Shared, Container, name]
           PortMappings:
             - HostPort: 0
               ContainerPort: 4000
-  CastleService:
+  AdzeService:
     Type: "AWS::ECS::Service"
     Properties:
       Cluster: !Ref ECSCluster
@@ -144,32 +144,32 @@ Resources:
       LoadBalancers:
         - ContainerName: !FindInMap [Shared, Container, name]
           ContainerPort: 4000
-          TargetGroupArn: !Ref CastleALBTargetGroup
+          TargetGroupArn: !Ref AdzeALBTargetGroup
       Role: !Ref ECSServiceIAMRole
-      TaskDefinition: !Ref CastleTaskDefinition
-  CastleWebRecordSetGroup:
+      TaskDefinition: !Ref AdzeTaskDefinition
+  AdzeWebRecordSetGroup:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
-      Comment: Record sets for dualstack web traffic to a castle instance
+      Comment: Record sets for dualstack web traffic to a adze instance
       HostedZoneName: prx.tech.
       RecordSets:
         - Type: AAAA
-          Name: !Sub castle.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+          Name: !Sub adze.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
           AliasTarget:
             DNSName: !Ref PlatformALBDNSName
             HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
         - Type: A
-          Name: !Sub castle.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+          Name: !Sub adze.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
           AliasTarget:
             DNSName: !Ref PlatformALBDNSName
             HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
   # CloudWatch Alarms
-  CastleALBTargetGroup500Alarm:
+  AdzeALBTargetGroup500Alarm:
     Type: "AWS::CloudWatch::Alarm"
     Condition: CreateProductionResources
     Properties:
       ActionsEnabled: true
-      AlarmName: Castle ALB Target Group HTTP 5XXs
+      AlarmName: Adze ALB Target Group HTTP 5XXs
       AlarmActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       InsufficientDataActions:
@@ -177,7 +177,7 @@ Resources:
       OKActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       AlarmDescription: >
-        5XX server errors originating from the castle target group exceeded 0
+        5XX server errors originating from the adze target group exceeded 0
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: "1"
       MetricName: HTTPCode_Target_5XX_Count
@@ -190,9 +190,9 @@ Resources:
         - Name: LoadBalancer
           Value: !Ref PlatformALBFullName
         - Name: TargetGroup
-          Value: !GetAtt CastleALBTargetGroup.TargetGroupFullName
+          Value: !GetAtt adzeALBTargetGroup.TargetGroupFullName
 Outputs:
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
     Value: !Sub |
-      castle.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+      adze.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
