Avoid circular dependency

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -471,11 +471,12 @@ Resources:
   # ECS task draining
   ECSDrainSNSTopic:
     Type: "AWS::SNS::Topic"
-    DependsOn: ECSDrainFunction
+  ECSDrainFunctionSubscription:
+    Type: "AWS::SNS::Subscription"
     Properties:
-      Subscription:
-        - Endpoint: !GetAtt ECSDrainFunction.Arn
-          Protocol: "lambda"
+      Endpoint: !GetAtt ECSDrainFunction.Arn
+      Protocol: lambda
+      TopicArn: !Ref ECSDrainSNSTopic
   ECSDrainSNSRole:
     Type: "AWS::IAM::Role"
     Properties:
