ARNs not names - and ASG doesn't export an ARN

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -516,11 +516,11 @@ Resources:
                   - ecs:ListTasks
                   - sns:ListSubscriptions
               - Effect: "Allow"
-                Resource: !Ref ECSClusterASG
+                Resource: "*" # TODO: how to get an ASG ARN?
                 Action:
                   - autoscaling:CompleteLifecycleAction
               - Effect: "Allow"
-                Resource: !Ref ECSCluster
+                Resource: !GetAtt ECSCluster.Arn
                 Action:
                   - ecs:SubmitContainerStateChange
                   - ecs:SubmitTaskStateChange
