Build ECS Cluster ARN for policy

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -520,7 +520,7 @@ Resources:
                 Action:
                   - autoscaling:CompleteLifecycleAction
               - Effect: "Allow"
-                Resource: !GetAtt ECSCluster.Arn
+                Resource: !Sub "arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:cluster/${ECSCluster}"
                 Action:
                   - ecs:SubmitContainerStateChange
                   - ecs:SubmitTaskStateChange
