--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -64,7 +64,7 @@ Mappings:
       WarningThreshold: "9"
       MaxSize: "10"
     Production:
-      InstanceType: c4.large
+      InstanceType: m4.large
       InstanceStorage: 72
       MinSize: "4"
       DefaultDesiredCapacity: "10"
