Pass stack name to approval SNS message

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -1057,7 +1057,7 @@ Resources:
                 Version: 1
               Configuration:
                 NotificationArn: !Ref CodePipelineApprovalsSnsTopic
-                CustomData: "TODO Get info about the deploy (last commit, etc)"
+                CustomData: !Sub ${AWS::StackName}-root-production
               RunOrder: 3
             - Name: ExecuteChangeSet
               ActionTypeId:
