Add trailing dot on alias target

--- a/etc/prx.org-hosted_zone.yml
+++ b/etc/prx.org-hosted_zone.yml
@@ -370,7 +370,7 @@ Resources:
         - Type: A
           Name: !Sub assets1.${Domain}
           AliasTarget:
-            DNSName: d11pcyef3meeu9.cloudfront.net
+            DNSName: d11pcyef3meeu9.cloudfront.net.
             HostedZoneId: Z2FDTNDATAQYW2
   Unbounce:
     DependsOn: HostedZone
