Work on prx.org hosted zone

--- a/etc/prx.org-hosted_zone.yml
+++ b/etc/prx.org-hosted_zone.yml
@@ -311,11 +311,11 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub cdn.saltcast.${Domain}
-  ProductionApps:
+  DotTech:
     DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
-      Comment: Production apps public domains
+      Comment: Public-facing domains for apps managed on .tech
       HostedZoneName: !Ref Domain
       RecordSets:
         - ResourceRecords:
@@ -343,6 +343,70 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub feeder.${Domain}
+  PrxDotOrg:
+    DependsOn: HostedZone
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: prx.org and www.prx.org
+      HostedZoneName: !Ref Domain
+      RecordSets:
+        - ResourceRecords:
+            - "199.119.122.237"
+          TTL: "300"
+          Type: A
+          Name: !Ref Domain
+        - ResourceRecords:
+            - "199.119.122.237"
+          TTL: "300"
+          Type: A
+          Name: !Sub www.${Domain}
+  DotOrg:
+    DependsOn: HostedZone
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: Legacy prx.org subdomains
+      HostedZoneName: !Ref Domain
+      RecordSets:
+        - ResourceRecords:
+            - !Sub id.${Domain}
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub auth.${Domain}
+        - ResourceRecords:
+            - !Sub experiments.${Domain}
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub x.${Domain}
+        - ResourceRecords:
+            - !Sub cms.${Domain}
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub hal.${Domain}
+        - ResourceRecords:
+            - !Sub staging.m.${Domain}
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub m-staging.${Domain}
+        - ResourceRecords:
+            - "107.20.211.130"
+          TTL: "300"
+          Type: A
+          Name: !Sub beta.fixer.${Domain}
+        - ResourceRecords:
+            - "54.211.199.5"
+          TTL: "300"
+          Type: A
+          Name: !Sub experiments.${Domain}
+        - ResourceRecords:
+            - "184.73.205.19"
+          TTL: "300"
+          Type: A
+          Name: !Sub four.${Domain}
+        - ResourceRecords:
+            - "107.20.215.126"
+          TTL: "300"
+          Type: A
+          Name: !Sub fixer.${Domain}
   Contegix:
     DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
@@ -1125,13 +1189,6 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub generation.${Domain}
-  S3:
-    DependsOn: HostedZone
-    Type: "AWS::Route53::RecordSetGroup"
-    Properties:
-      Comment: Unbounce
-      HostedZoneName: !Ref Domain
-      RecordSets:
   Unbounce:
     DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
@@ -1180,6 +1237,87 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub on.${Domain}
+  Fixer:
+    DependsOn: HostedZone
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: Fixer
+      HostedZoneName: !Ref Domain
+      RecordSets:
+        - ResourceRecords:
+            # TODO Could be an A ALIAS
+            - alpha-fixer-prx-178057969.us-east-1.elb.amazonaws.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub alpha-fixer.${Domain}
+  Cambridge:
+    DependsOn: HostedZone
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: Cambridge Office
+      HostedZoneName: !Ref Domain
+      RecordSets:
+        - ResourceRecords:
+            - "74.94.129.158"
+          TTL: "3600"
+          Type: A
+          Name: !Sub cambridge.${Domain}
+  Chef:
+    DependsOn: HostedZone
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: Chef
+      HostedZoneName: !Ref Domain
+      RecordSets:
+        - ResourceRecords:
+            - "107.21.98.161"
+          TTL: "300"
+          Type: A
+          Name: !Sub chef.${Domain}
+        - ResourceRecords:
+            - "107.21.98.161"
+          TTL: "300"
+          Type: A
+          Name: !Sub munin.${Domain}
+        - ResourceRecords:
+            - "107.21.98.161"
+          TTL: "300"
+          Type: A
+          Name: !Sub beta.munin.${Domain}
+        - ResourceRecords:
+            - "107.21.98.161"
+          TTL: "300"
+          Type: A
+          Name: !Sub jenkins.${Domain}
+  HowSound:
+    DependsOn: HostedZone
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: HowSound
+      HostedZoneName: !Ref Domain
+      RecordSets:
+        - ResourceRecords:
+            - howsound.prx.netdna-cdn.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub cdn.howsound.${Domain}
+  TheMoth:
+    DependsOn: HostedZone
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: The Moth
+      HostedZoneName: !Ref Domain
+      RecordSets:
+        - ResourceRecords:
+            - pc-a.bitgravity.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub cdn1.themoth.${Domain}
+        - ResourceRecords:
+            - wwwthemoth.prx.netdna-cdn.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub assets.themoth.${Domain}
   AmazonSes:
     DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
@@ -1202,11 +1340,11 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub dqoamfgwjnqyjzoe2rrvwkluoh7ee46v._domainkey.${Domain}
-  StagePages:
+  Statuspage:
     DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
-      Comment: Unbounce
+      Comment: Statuspage
       HostedZoneName: !Ref Domain
       RecordSets:
         - ResourceRecords:
