Fix syntax errors in prx.org hosted zone template

--- a/etc/prx.org-hosted_zone.yml
+++ b/etc/prx.org-hosted_zone.yml
@@ -1009,102 +1009,102 @@ Resources:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: audition2.${Domain}
+          Name: !Sub audition2.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: audition.qa.${Domain}
+          Name: !Sub audition.qa.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: dlmgr-files.qa.${Domain}
+          Name: !Sub dlmgr-files.qa.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: dlmgr.qa.${Domain}
+          Name: !Sub dlmgr.qa.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: download.qa.${Domain}
+          Name: !Sub download.qa.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: ftp.qa.${Domain}
+          Name: !Sub ftp.qa.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: help2.${Domain}
+          Name: !Sub help2.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: help2.qa.${Domain}
+          Name: !Sub help2.qa.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: help.qa.${Domain}
+          Name: !Sub help.qa.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: loadingdock2.${Domain}
+          Name: !Sub loadingdock2.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: loadingdock.qa.${Domain}
+          Name: !Sub loadingdock.qa.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: mp3audition.qa.${Domain}
+          Name: !Sub mp3audition.qa.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: mp3download2.${Domain}
+          Name: !Sub mp3download2.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: mp3download.qa.${Domain}
+          Name: !Sub mp3download.qa.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: prssstreams2.${Domain}
+          Name: !Sub prssstreams2.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: streams2.${Domain}
+          Name: !Sub streams2.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: streams.qa.${Domain}
+          Name: !Sub streams.qa.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: ws.qa.${Domain}
+          Name: !Sub ws.qa.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: www2.${Domain}
+          Name: !Sub www2.${Domain}
         - ResourceRecords:
             - !Sub ed.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: www.qa.${Domain}
+          Name: !Sub www.qa.${Domain}
   Orson:
     DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
@@ -1116,12 +1116,12 @@ Resources:
             - !Sub orson.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: listen.${Domain}
+          Name: !Sub listen.${Domain}
         - ResourceRecords:
             - !Sub orson.${Domain}
           TTL: "3600"
           Type: CNAME
-          Name: planet.${Domain}
+          Name: !Sub planet.${Domain}
   Legacy:
     DependsOn: HostedZone
     Type: "AWS::Route53::RecordSetGroup"
