Improve description for prx.org hosted zone template

--- a/etc/prx.org-hosted_zone.yml
+++ b/etc/prx.org-hosted_zone.yml
@@ -1,5 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: tktk
+Description: >
+  Hosted zone and record sets for prx.org
 Parameters:
   Domain:
     Default: prx.org.
