Fix  Remix hosted zone comment

--- a/etc/prx.mx-hosted_zone.yml
+++ b/etc/prx.mx-hosted_zone.yml
@@ -11,7 +11,7 @@ Resources:
     Type: "AWS::Route53::HostedZone"
     Properties:
       HostedZoneConfig:
-        Comment: Secondary Radiotopia domain
+        Comment: Remix domain
       HostedZoneTags:
         - Key: Project
           Value: Remix
